test_programs/compile_failure/noirc_frontend_tests_break_and_continue_outside_loop/src/main.nr

        pub unconstrained fn foo() {
            continue;
        }
        pub unconstrained fn bar() {
            break;
        }
    